--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample_commitlint_husky",
+  "name": "sample_lint-staged",
   "private": true,
   "version": "0.0.0",
   "type": "module",
